--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,8 @@ repositories {
 }
 
 dependencies {
-	testImplementation 'org.mockito:mockito-junit-jupiter:3.11.1'
-	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+	testCompile 'org.mockito:mockito-junit-jupiter:3.0.0'
+	testCompile 'org.junit.jupiter:junit-jupiter:5.1.1'
 }
 
 test { ///Please do not change this
