--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,10 @@ repositories {
 }
 
 dependencies {
-	testCompile 'org.mockito:mockito-junit-jupiter:3.3.3'
-	testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
+    testImplementation 'org.mockito:mockito-core:3.9.0'
+	testImplementation 'org.mockito:mockito-junit-jupiter:3.3.3'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+
 }
 
 test { ///Please do not change this
